# mywm

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: colors.rs  config.rs  hooks.rs  lib.rs  main.rs  styles.rs
src/styles/: dimensions.rs
