[package]
name = "mywm"
version = "0.1.0"
edition = "2021"
authors = ["Chris Dawkins"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = "0.3.1"
tracing = { version = "0.1.37", feature = ["attributes", "log"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
